nas/endpoint.yml
kind: Endpoints
apiVersion: v1
metadata:
 name: nas
subsets:
 - addresses:
     - ip: 192.168.1.11
   ports:
     - port: 5000
