nas/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nas
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
