nas/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: nas-ingress
spec:
  rules:
  - host: nas.krpetersen.dk
    http:
      paths:
      - backend:
          serviceName: nas
          servicePort: 80
        path: /
  tls:
  - hosts:
    - nas.krpetersen.dk
    secretName: nas-tls-cert
